[gd_scene load_steps=14 format=2]

[ext_resource path="res://challenges/week13/scenes/maps/golf_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://challenges/week13/scenes/maps/map.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=7]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 216 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 274.5, 38.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 140, 110 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 140, 46.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 343, 54 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 75, 285.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 445, 52.5 )

[sub_resource type="Animation" id=9]
resource_name = "Entering"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Exiting"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1024, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ) ]
}

[node name="map0" type="Node2D"]
position = Vector2( 1024, 0 )
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 65541, 4, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 7, 0, 131077, 2, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 5, 0, 196613, 2, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 5, 0, 262149, 2, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 5, 0, 327685, 2, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1610612746, 0, 327690, 0, 0, 327691, 0, 0, 327692, 6, 0, 393221, 2, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1610612738, 0, 458757, 2, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1610612738, 0, 524293, 2, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1610612745, 0, 524298, 8, 0, 524299, 8, 0, 524300, 8, 0, 524301, 8, 0, 524302, 8, 0, 524303, 8, 0, 524304, 8, 0, 524305, 8, 0, 524306, 8, 0, 524307, 8, 0, 524308, 8, 0, 524309, 8, 0, 524310, 8, 0, 524311, 8, 0, 524312, 8, 0, 524313, 8, 0, 524314, 7, 0, 589829, 2, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 5, 0, 655365, 3, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 1610612748, 0, 655385, 1, 0, 655386, 5, 0, 720920, 1610612741, 0, 720921, 1, 0, 720922, 5, 0, 786456, 1610612741, 0, 786457, 1, 0, 786458, 5, 0, 851992, 1610612741, 0, 851993, 1, 0, 851994, 5, 0, 917509, 4, 0, 917510, 8, 0, 917511, 8, 0, 917512, 8, 0, 917513, 8, 0, 917514, 8, 0, 917515, 8, 0, 917516, 8, 0, 917517, 8, 0, 917518, 8, 0, 917519, 8, 0, 917520, 8, 0, 917521, 8, 0, 917522, 8, 0, 917523, 8, 0, 917524, 8, 0, 917525, 8, 0, 917526, 8, 0, 917527, 8, 0, 917528, 1610612747, 0, 917529, 1, 0, 917530, 5, 0, 983045, 2, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 5, 0, 1048581, 2, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 5, 0, 1114117, 3, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 6, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 878, 384 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 589.5, 223.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 550, 95 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 285, -8.5 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 431, 400 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 91, 298.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 460, 622.5 )
shape = SubResource( 8 )

[node name="ball_start_position" type="Position2D" parent="."]
position = Vector2( 192, 513 )

[node name="hole_position" type="Position2D" parent="."]
position = Vector2( 368, 160 )

[node name="Actions" type="AnimationPlayer" parent="."]
anims/Entering = SubResource( 9 )
anims/Exiting = SubResource( 10 )
anims/RESET = SubResource( 11 )

[connection signal="animation_finished" from="Actions" to="." method="_on_Actions_animation_finished"]
